# dynamatic

./: CMakeLists.txt  build.sh  compile.sh  simulate.sh
data/: components.json
docs/MLIR_ops/: handshake.md
docs/Tutorials/: CreatingAPass.md
experimental/lib/Transforms/: HandshakeRemoveMemories.cpp
experimental/tools/: CMakeLists.txt
experimental/tools/export-vhdl/: CMakeLists.txt  export-vhdl.cpp  library.json
include/dynamatic/Support/: DOTPrinter.h  LogicBB.h
include/dynamatic/Transforms/: HandshakeCanonicalize.h  HandshakeOptimizeBitwidths.h  HandshakeSimplify.h  Passes.h  Passes.td
integration-test/share_test_1/: share_test_1.c
lib/Conversion/HandshakeToNetlist/: HandshakeToNetlist.cpp
lib/Conversion/StandardToHandshakeFPGA18/: StandardToHandshakeFPGA18.cpp
lib/Support/: DOTPrinter.cpp
lib/Transforms/: CMakeLists.txt  HandshakeCanonicalize.cpp  HandshakeOptimizeBitwidths.cpp  HandshakeSimplify.cpp  OptimizeBits.cpp
lib/Transforms/BufferPlacement/: BufferPlacementMILP.cpp  ExtractMG.cpp  FPGA20Buffers.cpp  HandshakeIterativeBuffers.cpp  HandshakePlaceBuffers.cpp  HandshakeSetBufferingProperties.cpp  OptimizeMILP.cpp  ParseCircuitJson.cpp
lib/Transforms/ResourceSharing/: CMakeLists.txt  FCCM22Sharing.cpp  SCC.cpp  modIR.cpp
tools/: CMakeLists.txt
tools/buffers/: CMakeLists.txt  buffers.cpp
tools/dynamatic-opt/: CMakeLists.txt
tools/dynamatic/scripts/: compile.sh
tools/export-dot-cfdfc/: export-dot-cfdfc.cpp
tutorials/: CMakeLists.txt
tutorials/CreatingAPass/: CMakeLists.txt
tutorials/CreatingPasses/: CMakeLists.txt
(+43 files in other folders)
